(RT_STD): Add strm2.

--- a/regtests/makefile
+++ b/regtests/makefile
@@ -40,8 +40,8 @@ RT_SOAP = soap1 soap2 soap3 workorder testxml test_speed test_soap \
 	$(RT_SOAP_SEC)
 
 # Standard regression tests
-RT_STD = turl tgetparam param dummy simple tclientto shutdown \
-	tres2 upload unexph auth moved turl2 turl3 strm test_templates_if \
+RT_STD = turl tgetparam param dummy simple tclientto shutdown strm strm2 \
+	tres2 upload unexph auth moved turl2 turl3 test_templates_if \
 	head hval turl4 ctab sock1 file redirect hostip upload2 upload3 \
 	$(RT_STD_SEC)
 
