Add LDAP section.

--- a/makefile.conf
+++ b/makefile.conf
@@ -33,6 +33,17 @@ MODE=std
 endif
 
 ##############################################################################
+# AWS provide a binding to the LDAP API. This binding will use the standard
+# LDAP DLL provided with Windows OS. On GNU/Linux you need to install OpenLDAP
+# if it is not already installed. If LDAP is installed on your system you can
+# set LDAP=1 below.
+ifeq (${OS}, Windows_NT)
+LDAP=1
+else
+LDAP=0
+endif
+
+##############################################################################
 # To activate the debug mode just uncomment the variable below. This will
 # build AWS with debug information and will output more build information.
 #
