--- a/soap/makefile
+++ b/soap/makefile
@@ -8,7 +8,9 @@ GARGS	= -q -u $(GFLAGS) -I../ssl -I../include -I../src $(INCLUDES)
 SOURCES	= soap.ads soap-types.adb soap-parameters.adb soap-message.adb \
 	soap-message-xml.adb soap-message-response.adb \
 	soap-message-response-error.adb soap-message-payload.adb \
-	soap-client.adb soap-utils.adb soap-message-reader.adb
+	soap-client.adb soap-utils.adb soap-message-reader.adb \
+	soap-wsdl.adb soap-wsdl-parser.adb soap-wsdl-parameters.adb \
+	soap-generator.adb
 
 UNITS = $(sort $(basename $(SOURCES)))
 
