--- a/makefile.conf
+++ b/makefile.conf
@@ -50,6 +50,11 @@ endif
 #DEBUG	= 1
 
 ##############################################################################
+# To run regtession tests with GDB, uncomment the line below.
+#
+#GDB_REGTESTS = 1
+
+##############################################################################
 # AWS will be installed under $(INSTALL)/AWS. Update this variable to point to
 # the install directory.
 INSTALL	 = $(HOME)
