--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -1,5 +1,6 @@
 alldifs
 auth.res
+auth.tmp
 b~auth.adb
 b~auth.ads
 b~check_mem.adb
@@ -58,6 +59,8 @@ b~test_wsdl.adb
 b~test_wsdl.ads
 b~test_wsdl2.adb
 b~test_wsdl2.ads
+b~test_wsdl3.adb
+b~test_wsdl3.ads
 b~testxml.adb
 b~testxml.ads
 b~tgetparam.adb
@@ -94,8 +97,11 @@ check_mem.res
 check_mem.run1
 check_mem.run2
 ctab.res
+ctab.tmp
 dirop.res
+dirop.tmp
 dummy.res
+dummy.tmp
 file.res
 file.tmp
 file.tmplt
@@ -104,6 +110,7 @@ file2.html
 file3.html
 gmem.out
 head.res
+head.tmp
 hello_demo-client.adb
 hello_demo-client.ads
 hello_demo-server.adb
@@ -112,20 +119,40 @@ hello_demo-types.adb
 hello_demo-types.ads
 hello_demo.ads
 hostip.res
+hostip.tmp
 hval.res
+hval.tmp
 moved.res
+moved.tmp
 param.res
+param.tmp
 redirect.res
+redirect.tmp
 run1
 run2
 shutdown.res
+shutdown.tmp
 simple.res
+simple.tmp
 soap1.res
+soap1.tmp
 soap2.res
+soap2.tmp
 soap3.res
+soap3.tmp
 sock1.res
+sock1.tmp
 sp.res
+sp.tmp
 ssp.res
+ssp.tmp
+stock_quote_service-client.adb
+stock_quote_service-client.ads
+stock_quote_service-server.adb
+stock_quote_service-server.ads
+stock_quote_service-types.adb
+stock_quote_service-types.ads
+stock_quote_service.ads
 stockquoteservice-client.adb
 stockquoteservice-client.ads
 stockquoteservice-server.adb
@@ -134,34 +161,60 @@ stockquoteservice-types.adb
 stockquoteservice-types.ads
 stockquoteservice.ads
 strm.res
+strm.tmp
 strm2.res
+strm2.tmp
 tclientto.res
+tclientto.tmp
 test_sec_soap.res
+test_sec_soap.tmp
 test_soap.res
+test_soap.tmp
 test_speed.res
+test_speed.tmp
 test_templates_if.res
+test_templates_if.tmp
 test_wsdl.res
+test_wsdl.tmp
 test_wsdl2.res
+test_wsdl2.tmp
+test_wsdl3.res
+test_wsdl3.tmp
 testxml.res
+testxml.tmp
 tgetparam.res
+tgetparam.tmp
 tlog.res
+tlog.tmp
 tres-1.res
 tres-2.res
 tres.res
 tres2.res
+tres2.tmp
 tresres-file1_html.ads
 tresres-file2_html.ads
 tresres-file_tmplt.ads
 tresres.adb
 tresres.ads
 tsgetparam.res
+tsgetparam.tmp
 turl.res
+turl.tmp
 turl2.res
+turl2.tmp
 turl3.res
+turl3.tmp
 turl4.res
+turl4.tmp
 unexph.res
+unexph.tmp
 unexph2.res
+unexph2.tmp
 upload.res
+upload.tmp
 upload2.res
+upload2.tmp
 upload3.res
+upload3.tmp
 workorder.res
+workorder.tmp
