--- a/regtests/makefile
+++ b/regtests/makefile
@@ -46,16 +46,16 @@ RT_SOAP = soap1 soap2 soap3 workorder testxml test_speed test_soap \
 RT_STD = turl tgetparam param dummy simple tclientto shutdown strm strm2 \
 	tres2 upload unexph auth moved turl2 turl3 test_templates_if \
 	head hval turl4 ctab sock1 file redirect hostip upload2 upload3 \
-	tlog unexph2 sp sessions $(RT_STD_SEC)
+	tlog unexph2 sp sessions dirop $(RT_STD_SEC)
 
 ifeq ($(XMLADA),)
 STD_TESTS   = $(RT_STD)
-OTH_TESTS   = tres dirop
+OTH_TESTS   = tres
 WSDL_TESTS  =
 WSDL_ATESTS =
 else
 STD_TESTS   = $(RT_STD) $(RT_SOAP)
-OTH_TESTS   = tres dirop check_mem
+OTH_TESTS   = tres check_mem
 WSDL_TESTS  = test_wsdl test_wsdl2 
 WSDL_ATESTS = test_wsdl3 
 endif
@@ -86,18 +86,6 @@ ifdef GDB_REGTESTS
 	./tgdb $@ > $@.res
 else
 	./$@ > $@.res
-endif
-	-diff -c -w $@.out $@.res >> alldifs
-
-dirop: force
-	echo -n Building dirop
-	gnatmake -g dirop $(GARGS) -largs $(LARGS) -bargs -E
-	echo ",  run it"
-	rm -f $@.res
-ifdef GDB_REGTESTS
-	./tgdb $@ | grep -v "CVS/" > $@.res
-else
-	./$@ | grep -v "CVS/" > $@.res
 endif
 	-diff -c -w $@.out $@.res >> alldifs
 
