--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -57,6 +57,8 @@ b~test_soap.adb
 b~test_soap.ads
 b~test_soap2.adb
 b~test_soap2.ads
+b~test_soap3.adb
+b~test_soap3.ads
 b~test_speed.adb
 b~test_speed.ads
 b~test_templates_if.adb
