--- a/regtests/makefile
+++ b/regtests/makefile
@@ -165,11 +165,11 @@ check_mem: force
 	rm -f aws-containers-tables.*
 	echo -n ",  run it"
 	./check_mem 2 1248 > check_mem.res
-	gnatmem 3 -i gmem.out check_mem$(EXEEXT) 2 1248 > check_mem.run1
+	gnatmem 3 -i gmem.out ./check_mem$(EXEEXT) 2 1248 > check_mem.run1
 	grep "   Final" check_mem.run1 > run1
 	echo ",  run it again"
 	./check_mem 30 1249 >> check_mem.res
-	gnatmem 3 -i gmem.out check_mem$(EXEEXT) 30 1249 > check_mem.run2
+	gnatmem 3 -i gmem.out ./check_mem$(EXEEXT) 30 1249 > check_mem.run2
 	grep "   Final" check_mem.run2 > run2
 	-diff -c -w run1 run2 >> alldifs
 
