--- a/src/.cvsignore
+++ b/src/.cvsignore
@@ -23,6 +23,7 @@ aws-resources.ads.texi
 aws-response.ads.texi
 aws-server-hotplug.ads.texi
 aws-server-push.ads.texi
+aws-server-status.ads.texi
 aws-server.ads.texi
 aws-services-directory.ads.texi
 aws-services-dispatchers-callback.ads.texi
