--- a/docs/.cvsignore
+++ b/docs/.cvsignore
@@ -1,5 +1,48 @@
 ada.sed
+aws-client.ads.texi
+aws-communication-client.ads.texi
+aws-communication-server.ads.texi
+aws-communication.ads.texi
+aws-config-ini.ads.texi
+aws-config-set.ads.texi
+aws-config.ads.texi
+aws-containers-tables.ads.texi
+aws-default.ads.texi
+aws-dispatchers-callback.ads.texi
+aws-dispatchers.ads.texi
+aws-exceptions.ads.texi
+aws-headers-values.ads.texi
+aws-headers.ads.texi
+aws-jabber.ads.texi
+aws-ldap-client.ads.texi
+aws-log.ads.texi
+aws-mime.ads.texi
+aws-parameters.ads.texi
+aws-resources-streams.ads.texi
+aws-resources.ads.texi
+aws-response.ads.texi
+aws-server-hotplug.ads.texi
+aws-server-push.ads.texi
+aws-server-status.ads.texi
+aws-server.ads.texi
+aws-services-directory.ads.texi
+aws-services-dispatchers-method.ads.texi
+aws-services-dispatchers-uri.ads.texi
+aws-services-dispatchers-virtual_host.ads.texi
+aws-services-dispatchers.ads.texi
+aws-services-page_server.ads.texi
+aws-session.ads.texi
+aws-smtp-client.ads.texi
+aws-smtp.ads.texi
+aws-status.ads.texi
+aws-templates.ads.texi
+aws-url.ads.texi
+aws.ads.texi
+aws.aux
+aws.cp
+aws.cps
 aws.dvi
+aws.fn
 aws.html
 aws.info
 aws.info-1
@@ -11,10 +54,21 @@ aws.info-6
 aws.info-7
 aws.info-8
 aws.info-9
+aws.ky
 aws.pdf
+aws.pg
 aws.ps
 aws.texi
+aws.toc
+aws.tp
 aws.txt
+aws.vr
+soap-client.ads.texi
+soap-message-xml.ads.texi
+soap-message.ads.texi
+soap-parameters.ads.texi
+soap-types.ads.texi
+soap.ads.texi
 style-guide.html
 style-guide.info
 style-guide.pdf
