--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -66,6 +66,8 @@ b~test_soap2.adb
 b~test_soap2.ads
 b~test_soap3.adb
 b~test_soap3.ads
+b~test_soap4.adb
+b~test_soap4.ads
 b~test_speed.adb
 b~test_speed.ads
 b~test_templates_if.adb
@@ -198,6 +200,7 @@ test_soap.res
 test_soap.tmp
 test_soap2.res
 test_soap3.res
+test_soap4.res
 test_speed.res
 test_speed.tmp
 test_templates_if.res
