(RT_STD): Add sessions2.

--- a/regtests/makefile
+++ b/regtests/makefile
@@ -46,7 +46,8 @@ RT_SOAP = soap1 soap2 soap3 workorder testxml test_speed test_soap \
 RT_STD = turl tgetparam param dummy simple tclientto shutdown strm strm2 \
 	tres2 upload unexph auth auth2 moved turl2 turl3 test_templates_if \
 	head hval turl4 ctab sock1 file redirect hostip upload2 upload3 \
-	tlog unexph2 sp sessions dirop multiple tcom tmime $(RT_STD_SEC)
+	tlog unexph2 sp sessions dirop multiple tcom tmime sessions2 \
+	$(RT_STD_SEC)
 
 ifeq ($(XMLADA),)
 STD_TESTS   = $(RT_STD)
