(TEXI2HTML): New variable. (APIFILES): Add aws-messages.ads.texi.

--- a/docs/makefile
+++ b/docs/makefile
@@ -27,6 +27,7 @@ APIFILES = ../src/aws.ads.texi \
 	../src/aws-jabber.ads.texi \
 	../src/aws-ldap-client.ads.texi \
 	../src/aws-log.ads.texi \
+	../src/aws-messages.ads.texi \
 	../src/aws-mime.ads.texi \
 	../src/aws-parameters.ads.texi \
 	../src/aws-resources-streams.ads.texi \
@@ -54,6 +55,12 @@ APIFILES = ../src/aws.ads.texi \
 	../soap/soap-message.ads.texi \
 	../soap/soap-parameters.ads.texi \
 	../soap/soap-types.ads.texi
+
+ifeq (${OS}, Windows_NT)
+TEXI2HTML = texi2html.pl
+else
+TEXI2HTML = texi2html.pl
+endif
 
 check_env:
 	(if ! [ -e ../src/aws-os_lib.adb ]; then \
@@ -99,7 +106,7 @@ ada.sed: makefile
 	-makeinfo $<
 
 %.html : %.texi
-	-texi2html.pl -menu -monolithic $<
+	-$(TEXI2HTML) -menu -monolithic $<
 
 %.txt : %.texi
 	-makeinfo --no-headers $< > $@
